Updated version history for Version 3.3. Updated README to recommend running in Docker containers